--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@mapbox/leaflet-omnivore": "^0.3.4",
     "leaflet": "^1.8.0",
     "sass": "^1.51.0",
     "sirv-cli": "^2.0.0"
