--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@mapbox/leaflet-omnivore": "^0.3.4",
     "leaflet": "^1.8.0",
+    "leaflet.markercluster": "^1.5.3",
     "sass": "^1.51.0",
     "sirv-cli": "^2.0.0"
   }
