--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "leaflet-vector-tile-layer": "0.11.1",
     "leaflet.markercluster": "^1.5.3",
     "sass": "^1.51.0",
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-tooltip": "^1.2.0"
   }
 }
